# Amethyst

./: .gitignore  Cargo.toml  README.md
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
