[workspace]
resolver = "3"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Scanavium21 <scanavium21@protonmail.com>"]
license = "MIT"
publish = false
repository = "https://github.com/Geoxor/Amethyst"

[package]
name = "amethyst-ui"
description = "Amethyst GUI defintion using the Sycamore framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
sycamore = { version = "0.9", features = ["suspense"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
